<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.czz.stockknower.activity.MainActivity"
    android:background="@android:color/white">
    
    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_font_large"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title_bar"
        android:layout_above="@+id/ll_tab_bar">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/botton_bar"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_stock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_one"
            android:gravity="center"
            android:drawableTop="@mipmap/stock"
            android:textSize="@dimen/text_font_medium"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_two"
            android:gravity="center"
            android:drawableTop="@mipmap/query"
            android:textSize="@dimen/text_font_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/mine"
            android:text="@string/tab_three"
            android:textSize="@dimen/text_font_medium"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>
