<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.czz.stockknower.fragment.MineFragment"
    android:background="@color/gray_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/holo_green_light">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/head"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            app:riv_corner_radius="100dp"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请先登录"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignTop="@id/img_head"
            android:layout_toRightOf="@id/img_head"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_head"
            android:layout_alignBottom="@id/img_head"
            android:text="登录"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_collection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_aboutus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"/>

    </RelativeLayout>

</LinearLayout>
